--- a/src/components/Workspace/Workspace.module.css
+++ b/src/components/Workspace/Workspace.module.css
@@ -12,6 +12,23 @@
   width: 400px;
 }
 
+.active {
+  background-color: rgb(39, 37, 37);
+  border-radius: 40px;
+}
+
+.preBottomBarButton {
+  position: absolute;
+  bottom: 5px;
+  right: 10px;
+  text-align: center;
+  border-radius: 50%;
+  width: 15px;
+  height: 15px;
+  background-color: red;
+  font-size: 9px;
+}
+
 .bottomBar {
   display: flex;
   justify-content: space-between;
@@ -68,6 +85,10 @@
   display: flex;
 }
 
+.bottomBarButtonItem {
+  position: relative;
+}
+
 .bottomBarButton {
   display: flex;
   align-items: center;
@@ -80,11 +101,13 @@
   margin-right: 10px;
   text-align: center;
   font-size: 25px;
+  transition: transform 1s;
 }
 
 .bottomBarButton:hover,
 .bottomBarButton:focus {
   background-color: gray;
+  transform: scale(1.3);
 }
 
 .chatSelector {
@@ -201,7 +224,22 @@
   display: flex;
 }
 
+.preButtonChatHeader {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-radius: 50%;
+  width: 10px;
+  height: 10px;
+  background-color: green;
+  font-size: 9px;
+}
+
 .buttonChatHeader {
+  position: relative;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -213,12 +251,14 @@
   padding: 4px;
   border: none;
   background-color: transparent;
+  transition: transform 1s;
 }
 
 .buttonChatHeader:hover,
 .buttonChatHeader:focus {
   background-color: gray;
   color: #ffffff;
+  transform: scale(1.2);
 }
 
 .chatBtnItem,
@@ -297,6 +337,7 @@
   background-color: inherit;
   width: 35px;
   height: 35px;
+  transition: transform 1s;
 }
 
 .chatBtn:hover,
@@ -309,4 +350,16 @@
   width: 350px;
   height: calc(100vh - 100px);
   overflow: scroll;
+}
+
+.modalBackdrop {
+  width: 100vw;
+  height: 100vh;
+  background-color: red;
+}
+
+.modal {
+  width: 300px;
+  height: 300px;
+  background-color: red;
 }
